fix: calendar list align

--- a/src/assets/styles/calendar.scss
+++ b/src/assets/styles/calendar.scss
@@ -144,6 +144,7 @@
 }
 
 .td-lesson {
+  margin-top: 1rem;
   font-family: Inter;
   font-style: normal;
   font-weight: 600;
@@ -154,6 +155,7 @@
 }
 
 .td-topic-level {
+  margin-top: 1rem;
   font-family: Inter;
   font-style: normal;
   font-weight: normal;
@@ -178,6 +180,7 @@
 }
 
 .td-tutor {
+  margin-top: 1rem;
   font-family: Inter;
   font-style: normal;
   font-weight: normal;
